[gd_scene load_steps=4 format=3 uid="uid://ckitdvv62o4s5"]

[ext_resource type="Script" uid="uid://dyu7iat300pwl" path="res://source/enemy.gd" id="1_4gyqm"]
[ext_resource type="Texture2D" uid="uid://buurifc5jfvyc" path="res://assets/sprites/enemy.png" id="2_r6xaq"]

[sub_resource type="CircleShape2D" id="CircleShape2D_md0e3"]

[node name="Enemy" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 8
motion_mode = 1
script = ExtResource("1_4gyqm")
speed = 200.0

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -4)
texture = ExtResource("2_r6xaq")

[node name="Container" type="VBoxContainer" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -26.0
offset_top = -131.0
offset_right = 26.0
offset_bottom = -51.0
grow_horizontal = 2
grow_vertical = 0
metadata/_edit_group_ = true

[node name="StateLabel" type="Label" parent="Container"]
layout_mode = 2
text = "State"
horizontal_alignment = 1

[node name="HealthLabel" type="Label" parent="Container"]
layout_mode = 2
text = "Health"
horizontal_alignment = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_md0e3")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_desired_distance = 10.0
path_postprocessing = 1
simplify_path = true
simplify_epsilon = 20.0
avoidance_enabled = true
neighbor_distance = 100.0
max_speed = 200.0
debug_use_custom = true
debug_path_custom_color = Color(1, 0, 0, 1)

[connection signal="velocity_computed" from="NavigationAgent2D" to="." method="_on_navigation_agent_2d_velocity_computed"]
